--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -154,7 +154,7 @@
           </div>
         </div>
         <div class="d-flex flex-column align-items-center">
-          <p><b> Nombre d'employée dans l'entreprise </b></p>
+          <p><b> Nombre d'employé·e·s dans l'entreprise </b></p>
           <div class="pill d-flex justify-content-center align-items-center">
             <%= @trash_diagnostic.employees_nb.to_i %>
           </div>
