add back button to trash_diagnostic, and - in objectif pill

--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -150,7 +150,7 @@
         <div class="d-flex flex-column align-items-center">
           <p> <b> Objectif </b></p>
           <div class="pill d-flex justify-content-center align-items-center">
-            <%= @trash_diagnostic.reduction_objective.to_i %> %
+            - <%= @trash_diagnostic.reduction_objective.to_i %> %
           </div>
         </div>
         <div class="d-flex flex-column align-items-center">
