--- a/app/views/trash_diagnostics/edit.html.erb
+++ b/app/views/trash_diagnostics/edit.html.erb
@@ -17,6 +17,7 @@
 
         </div>
         <%= f.button :submit, "Valider", class:"btn btn-primary bold" %>
+        <%= link_to "Retour", donnees_path, class: "btn btn-outline-primary ml-2" %>
       <% end %>
     </div>
   </div>
