--- a/app/views/bins/edit.html.erb
+++ b/app/views/bins/edit.html.erb
@@ -85,7 +85,7 @@
         <%= f.input :cost, label: false %>
         <div class="d-flex justify-content-center mt-4 mb-5">
           <%= f.button :submit, "Valider", class:"btn btn-primary bold" %>
-          <%= link_to "Retour", donnees_path, class: "btn btn-outline-primary ml-2" %>
+          <%= link_to "Retour", bins_path, class: "btn btn-outline-primary ml-2" %>
         </div>
       <% end %>
     </div>
