--- a/app/views/collects/new.html.erb
+++ b/app/views/collects/new.html.erb
@@ -1,11 +1,12 @@
 <div class="wrapper">
-  <div class="container">
+  <div class="container h-100">
     <div class="container-soutenir">
       <h1 class="header text-primary pt-5 text-center">Saisir un relevé</h1>
       <%= simple_form_for @collect do |f| %>
         <p><b>1.</b>Choisir un bac :</p>
         <p><em>Si vous n'avez pas encore créé le bac pour lequel vous souhaitez faire le relevé, créez le <%= link_to "ici", new_bin_path %></em></p>
         <%= f.input :bin_id, collection: @bins.map {|bin| [bin.bin_type.name, bin.id] } , label_method: :first, value_method: :last, label: false %>
+
         <div id='collectDisplay' data-collects="<%= @collects_end.to_json %>"></div>
         <p><b>2.</b>Relevé du : </p>
         <%= f.input :start_at, label: false %>
@@ -15,11 +16,11 @@
         <%= f.input :filled_rate, collection: [["0%", 0], ["25%", 25], ["50%", 50], ["75%", 75], ["100%", 100], ["125%", 125], ["150%", 150]], label_method: :first, value_method: :second, label: false %>
         <p><b>4.</b>Commentaire</p>
         <%= f.input :comment, label: false %>
-        <div class="">
+
+        <div class="mb-5">
           <%= f.button :submit, "Enregistrer", class: "btn btn-primary bold" %>
           <%= link_to "Retour", donnees_path, class: "btn btn-outline-primary" %>
         </div>
-
       <% end %>
     </div>
   </div>
@@ -34,8 +35,13 @@
   input.addEventListener("change", (e) => {
     var binId = parseInt(e.target.value);
     var lastCollect = list.find(element => element.id === binId);
+
+    if(lastCollect == undefined) {
+      console.log(lastCollect)
+      return collectDisplay.innerHTML = "<p>Vous n'avez pas encore fait de relevé pour ce bac</p>";
+    };
+
     var endDate = lastCollect.end_at;
-    console.log(endDate);
-    collectDisplay.innerHTML = `<p>La dernière collecte s'est finie le ${endDate}</p>`;
+    collectDisplay.innerHTML = `<p>La dernière collecte s'est finie le <b>${endDate}</b> pour ce bac</p>`;
   })
 </script>
