--- a/app/views/collects/new.html.erb
+++ b/app/views/collects/new.html.erb
@@ -9,9 +9,9 @@
 
         <div id='collectDisplay' data-collects="<%= @collects_end.to_json %>"></div>
         <p><b>2.</b>Relevé du : </p>
-        <%= f.input :start_at, label: false %>
+        <%= f.input :start_at, as: :string, label: false, input_html: {id: "range_start"} %>
         <p>au</p>
-        <%= f.input :end_at, label: false %>
+        <%= f.input :end_at, as: :string,  label: false, input_html: {id: "range_end"} %>
         <p><b>3.</b>Taux de remplissage du bac</p>
         <%= f.input :filled_rate, collection: [["0%", 0], ["25%", 25], ["50%", 50], ["75%", 75], ["100%", 100], ["125%", 125], ["150%", 150]], label_method: :first, value_method: :second, label: false %>
         <p><b>4.</b>Commentaire</p>
