change carousel, home element, companies#new, max-height to all array

--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -144,7 +144,7 @@
       <% end %>
       <div class="d-flex flex-column flex-lg-row justify-content-around align-items-center my-5">
         <div class="d-flex flex-column align-items-center">
-          <p><b>Coup annuel des déchets</b></p>
+          <p><b>Coût annuel des déchets</b></p>
           <div class="pill d-flex justify-content-center align-items-center">
             <%= @trash_diagnostic.annual_cost %> €
           </div>
