--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -15,8 +15,8 @@
       <%= image_tag "gestion.jpg", class:"d-block w-100", alt:"First slide" %>
       <div class="carousel-caption">
         <%= link_to "/pourquoi", class:"btn btn-secondary text-white responsive-btn box" do %>
-        <h5><b>Chaque salarié·e de bureau produit en moyenne 140 kg de déchets par an</b></h5>
-        <p class="mb-0">Et vous ?</p>
+        <h5><b>140 kg de déchets par bureau</b></h5>
+        <p class="mb-0">Relevez le Défi Zéro Déchet Des Pros</p>
         <% end %>
       </div>
     </div>
