remove email field, remove referent

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,6 @@
 
 <div class="bg-white container viewport space-top mb-5">
   <h1 class="mt-5 mb-4 header text-primary text-center">Profil</h1>
-  <h3 class= "pt-3 mt-5">Référent·e</h3>
   <%= simple_form_for(@user, url: user_path(@user)) do |f|%>
     <div class="row">
       <div class="col-12 col-md-3">
@@ -22,7 +21,7 @@
         <%= f.input :telephone, placeholder: 'Téléphone*', label: false  %>
       </div>
       <div class="col-12 col-md-6">
-        <%= f.input :email, placeholder: 'Email*', label: false  %>
+        Email : <%= current_user.email %>
       </div>
       <div class="col-12">
         <%= f.input :newsletter_dzd, label: "Oui, je veux recevoir la newsletter du Défi Zéro Déchet des Pros" %>
