--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -73,7 +73,7 @@
           <%= image_tag "metropole.svg", height: 100 %>
         <% end %>
       </div>
-      
+
       <div class="col-12 col-sm-2 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
         <%= link_to "https://www.stop-dechets.fr/territoire-zero-dechets-zero-gaspillage", target: :blank do %>
         <%= image_tag "territoire-ZDZG.svg", height: 100 %>
@@ -89,6 +89,11 @@
       <div class="col-12 col-sm-2 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
         <%= link_to "https://leanature.com/", target: :blank do %>
           <%= image_tag "lea-nature.png", width: 100 %>
+        <% end %>
+      </div>
+      <div class="col-12 col-sm-2 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
+        <%= link_to "https://bordeauxgironde.cci.fr/", target: :blank do %>
+          <%= image_tag "CCI.png", width: 100 %>
         <% end %>
       </div>
     </div>
