--- a/app/views/pages/partenaires.html.erb
+++ b/app/views/pages/partenaires.html.erb
@@ -58,46 +58,51 @@
         <div class="row d-flex text-align-center justify-content-center">
           <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
             <%= link_to "https://www.ademe.fr/", target: :blank do %>
-              <%= image_tag "ADEME.png", height: 150 %>
+              <%= image_tag "ADEME.png", height: 100 %>
             <% end %>
           </div>
           <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
             <%= link_to "http://www.bordeaux-metropole.fr/", target: :blank do %>
-              <%= image_tag "metropole.svg", height: 150 %>
+              <%= image_tag "metropole.svg", height: 100 %>
             <% end %>
           </div>
           <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
             <%= link_to "http://www.bordeaux-metropole.fr/", target: :blank do %>
-              <%= image_tag "region.png", height: 150 %>
+              <%= image_tag "region.png", height: 100 %>
             <% end %>
           </div>
 
           <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
             <%= link_to "https://www.stop-dechets.fr/territoire-zero-dechets-zero-gaspillage", target: :blank do %>
-              <%= image_tag "territoire-ZDZG.svg", height: 150 %>
+              <%= image_tag "territoire-ZDZG.svg", height: 100 %>
             <% end %>
           </div>
           <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
             <%= link_to "https://leanature.com/", target: :blank do %>
-              <%= image_tag "lea-nature.png", width: 130 %>
+              <%= image_tag "lea-nature.png", width: 100 %>
             <% end %>
           </div>
         </div>
 
         <div class="row d-flex text-align-center justify-content-center pb-5">
           <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 pr-2 d-flex align-items-center justify-content-center">
-            <%= link_to "https://www.cebx.fr/", target: :blank do %>
-              <%= image_tag "club-entreprises.svg", height: 150 %>
+            <%= link_to "https://bordeauxgironde.cci.fr/", target: :blank do %>
+              <%= image_tag "CCI.png", height: 100 %>
             <% end %>
           </div>
           <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 pr-2 d-flex align-items-center justify-content-center">
             <%= link_to "https://www.cebx.fr/", target: :blank do %>
-              <%= image_tag "GMAI.png", height: 130 %>
+              <%= image_tag "club-entreprises.svg", height: 100 %>
+            <% end %>
+          </div>
+          <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 pr-2 d-flex align-items-center justify-content-center">
+            <%= link_to "https://www.cebx.fr/", target: :blank do %>
+              <%= image_tag "GMAI.png", height: 100 %>
             <% end %>
           </div>
           <div class="col-12 col-sm-4 col-lg-4 text-center mb-4 d-flex align-items-center justify-content-center">
             <%= link_to "https://www.cebx.fr/", target: :blank do %>
-              <%= image_tag "ecoindustries.png", width: 250 %>
+              <%= image_tag "ecoindustries.png", width: 100 %>
             <% end %>
           </div>
         </div>
