--- a/app/stylesheets/components/_shame.scss
+++ b/app/stylesheets/components/_shame.scss
@@ -230,3 +230,9 @@ a.cool-link {
 p.minus {
   font-size: 15px;
 }
+
+.officielle img{
+  // max-height: 350px;
+  max-width: 90vw;
+  object-fit: contain;
+}
