--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -46,7 +46,7 @@
       <hr/>
 
       <p class="my-5">Si vous souhaitez participer à la prochaine édition du Défi Zéro Déchet des Pros (fin 2019), <%= link_to "contactez-nous", contact_path %> pour rester informé.e et faire partie des premiers participants.</p>
-      <h2 class="mt-5 green-bg">Participants au projet</h2>
+      <h2 class="mt-5 green-bg">Entreprises</h2>
       <div class=" d-flex justify-content-center my-5 officielle">
         <%= image_tag "photo_officielle.jpg", height: 350 %>
       </div>
