--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -64,7 +64,7 @@
 
            <% if @total_weight != 0 %>
             <div class="d-flex justify-content-center align-items-center mt-4 percentage">
-              <div class="percente percente-red">
+              <div class="percente percente-blue">
                 <%= (@admin_residual_trash / @total_weight * 100).round %>%
               </div>
               <p>d'ordures ménagères résiduelles sur la production totale de déchets de fonctionnement</p>
