add bold last line company index

--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -90,7 +90,7 @@
         <p class="text-center m-0">Votre adresse de messagerie est uniquement utilisée pour vous envoyer les lettres d'information du Défi Zéro Déchet des Pro.</p>
         <p class="text-center mb-5">Vous pouvez à tout moment utiliser le lien de désabonnement intégré dans la newsletter. <%= link_to "En savoir plus sur la gestion de vos données et vos droits", politique_path, class:"cool-link" %></p>
       </div>
-      <p class="my-5">Si vous souhaitez participer à la prochaine édition du Défi Zéro Déchet des Pros (fin 2019), <%= link_to "contactez-nous", contact_path %> pour rester informé.e et faire partie des premiers participants.</p>
+      <b><p class="my-5">Si vous souhaitez participer à la prochaine édition du Défi Zéro Déchet des Pros (fin 2019), <%= link_to "contactez-nous", contact_path %> pour rester informé.e et faire partie des premiers participants.</p></b>
       <hr/>
     </div>
   <%= render 'shared/footer' %>
