change color percent

--- a/app/views/charts/_show.html.erb
+++ b/app/views/charts/_show.html.erb
@@ -3,7 +3,7 @@
 
 <% if @total_weight_per_company != 0 %>
   <div class="d-flex justify-content-center align-items-center my-4 percentage">
-    <div class="percente percente-red">
+    <div class="percente percente-blue">
       <%= (@residual_trash / @total_weight_per_company * 100).round %>%
     </div>
     <p>d'ordures ménagères résiduelles sur la production totale de déchets de fonctionnement</p>
