--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -17,8 +17,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, t(".change_my_password") %>
+    <%= f.button :submit, t(".change_my_password"), class:"btn btn-primary" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
