--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -11,8 +11,8 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, t(".send_me_reset_password_instructions") %>
+    <%= f.button :submit, t(".send_me_reset_password_instructions"), class:'btn btn-primary' %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+
