array in progress

--- a/app/views/charts/_show.html.erb
+++ b/app/views/charts/_show.html.erb
@@ -11,8 +11,8 @@
 <% end %>
 
 <h2 class="green-bg my-4">Total par type de déchets</h2>
-<div class="structur-array">
-  <table class="mt-4">
+
+  <table class="mt-4 fixed_headers">
     <thead>
       <tr class="text-center">
         <th> Type de déchet</th>
@@ -21,19 +21,20 @@
         <th> Poids total </th>
       </tr>
     </thead>
-    <% @days_and_weight_per_type_per_person.each do |type|  %>
-      <tbody>
-        <td><%= type[0] %></td>
-        <td><%= (type[2] / type[1]).round(2) %></td>
-        <td><%= type[1].to_i  %></td>
-        <td><%= type[2].round %> Kg</td>
-      </tbody>
-    <% end %>
     <tbody>
-      <td>Total</td>
-      <td>-</td>
-      <td>-</td>
-      <td><%= @total_weight_per_company.round %> Kg</td>
+      <% @days_and_weight_per_type_per_person.each do |type|  %>
+        <tr>
+          <td><%= type[0] %></td>
+          <td><%= (type[2] / type[1]).round(2) %></td>
+          <td><%= type[1].to_i  %></td>
+          <td><%= type[2].round %> Kg</td>
+        </tr>
+      <% end %>
+      <tr>
+        <td>Total</td>
+        <td>-</td>
+        <td>-</td>
+        <td><%= @total_weight_per_company.round %> Kg</td>
+      </tr>
     </tbody>
   </table>
-</div>
