--- a/app/stylesheets/components/_array.scss
+++ b/app/stylesheets/components/_array.scss
@@ -1,29 +1,28 @@
-.structur-array {
-  overflow: scroll;
-  max-height: 600px;
-}
 
-th {
-  padding: 15px 20px;
-  background: $secondary;
-  color: white;
-}
-
-td:first-child {
-  font-weight: bold;
-}
-
-td {
-  text-align: center;
-}
-
-tbody:nth-child(even) {
-  background: #FFF;
-}
-tbody:nth-child(odd) {
-  background: #CCC;
-}
-
-table.user-array {
+.fixed_headers {
+  table-layout: fixed;
   width: 100%;
+  th, td {
+    padding: 5px;
+    min-width: 200px;
+    max-width: 200px;
+    text-align: center;
+  }
+  thead {
+    text-align: center;
+    background-color: $secondary;
+    color: white;
+    tr {
+      display: block;
+    }
+  }
+  tbody {
+    overflow: auto;
+    display: block;
+    width: 100%;
+    height: 200px;
+    tr:nth-child(even) {
+      background-color: gray;
+    }
+  }
 }
